--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,14 @@ img{
 }
 .m-header{
 	width: 100%;
+    height: 45px;
+	margin-top: 20px;
+}
+.logo-img{
+	width: 33%;
+	float: left;
 }
 .logo{
-	width: 33%;
-}
-.logo-im{
 	width: 70px;
 	height: 45px;
 	float: left;
@@ -23,13 +26,13 @@ img{
 }
 .search{
 	float: left;
+	position: relative;
 	width: 33%;
 }
 .search input{
 	float: left;
-	width: 237px;
+	width: 270px;
 	height: 30px;
-	position: relative;
 }
 .search-icon{
 	position: absolute;
@@ -43,4 +46,162 @@ img{
     background-color: black;
     color: white;
     border-radius: 5px;
+    left: 235px;
+}
+.shoping-cart{
+	width: 33%;
+    float: left;
+}
+.shoping-icon{
+	position: relative;
+    width: 35px;
+    height: 30px;
+    background-color: #5ab210;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    float: left;
+}
+.shoping-icon a{
+    color: white;
+}
+.cart-text{
+	position: absolute;
+    top: 13px;
+    right: 455px;
+    width: 15px;
+    height: 15px;
+    background-color: red;
+    color: white;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #5ab210;
+}
+.cart-text2{
+    float: left;
+    font-size: 12px;
+    margin: -10px 0px 0px 10px;
+}
+.catagory-menu{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+}
+.catagory{
+    float: left;
+    width: 10%;
+    height: 48px;
+    border-bottom: none;
+    margin-left: 70px;
+}
+.catagory-text{
+    float: left;
+    font-size: 20px;
+    color: white;
+    margin: -12px 0px 0px 15px;
+}
+.catagory-icon{
+    padding: 20px 0px 0px 6px;
+    float: left;
+    color: white;
+}
+.catagory:hover{
+    background-color: #5e5e5e;
+    border-bottom: 2px solid #5ab210;
+}
+.menu{
+    float: right;
+    width: 70%;
+    height:50px;
+}
+.menu ul{
+    list-style: none;
+}
+.menu li{
+    display: inline-block;
+}
+.menu li a{
+    text-decoration: none;
+    color: white;
+    margin-left: 100px;
+    padding: 16px 15px 17px 10px;
+}
+.menu a:hover{
+    background-color: #5e5e5e;
+}
+.hero-m{
+    width: 100%;
+    height: 320px;
+}
+.hero-img{
+    position: relative;
+    width: 100%;
+    height: 320px;
+}
+.hero-m img{
+    width: 100%;
+    height: 320px;
+}
+.hero-text{
+    position: absolute;
+    top: 110px;
+    left: 263px;
+    right: 626px;
+}
+.hero-text h1{
+    color: white;
+    font-size: 65px;
+}
+.hero-text p{
+    color: white;
+}
+.battun{
+    position: absolute;
+    width: 105px;
+    height: 25px;
+    background-color: #5ab210;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: -25px;
+    left: 360px;
+}
+.battun a{
+    color: white;
+    text-decoration: none;
+}
+.offer{
+    width: 100%;
+    height: 260px;
+}
+.offer-all{
+
+}
+.offer-img1{
+    position: relative;
+    width: 40%;
+    height: 220px;
+    padding: 35px 0px 0px 55px;
+}
+.offer-img2{
+    position: absolute;
+    bottom: -320px;
+    left: 322px;
+}
+.offer-text{
+    position: absolute;
+    bottom: -257px;
+    left: 160px;
+    color: white;
+}
+.offer-text h5{
+    font-size: 20px;
+    line-height: 0px;
+}
+.offer-text p{
+    font-size: 13px;
+    line-height: 0px;
 }
