--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 body{
 	margin: 0;
     font-family: sans-serif;
+    background-color: #282828;
 }
 .wraper{
 	width: 1170px;
 	margin: auto;
+
 }
 img{
 	width: 100%;
@@ -13,7 +15,8 @@ img{
 .m-header{
 	width: 100%;
     height: 45px;
-	margin-top: 20px;
+	padding-top: 20px;
+    background-color: white;
 }
 .logo-img{
 	width: 33%;
@@ -177,6 +180,7 @@ img{
 .offer{
     width: 100%;
     height: 260px;
+    background-color: white;
 }
 .offer-m{
     width: 40%;
@@ -208,14 +212,19 @@ img{
 }
 .popular-prodact-m{
     width: 100%;
-    height: 415px;
+    height: 430px;
+    background-color: white;
+    padding-top: 20px;
+}
+.popular-prodact-m h3{
+    padding-left: 65px;
 }
 .popular-img{
-    width: 18%;
+    width: 17%;
     height: 337px;
     float: left;
     margin-right: 50px;
-    margin-left: 31px;
+    margin-left: 43px;
     transition: all 0.05s;
     position: relative;
     margin-top: 20px;
@@ -359,4 +368,50 @@ img{
     height: 100%;
     top: 0;
     left: 0;
+}
+.star-m{
+    width: 100%;
+    height: 470px;
+    background-color: white;
+}
+.best-selling{
+    width: 29%;
+    height: 465px;
+    margin-left: 50px;
+    float: left;
+}
+.best-selling h4{
+    margin-bottom: 45px
+}
+.star-img{
+    width: 90%;
+    height: 110px;
+    background-color: #fafafa;
+    border: 1px solid #d9d9d9;
+    margin-top: 20px;
+}
+.w-img{
+    width: 30%;
+    height: 100px;
+    float: left;
+    margin: 5px 20px 0px 25px;
+}
+.s-text{
+    float: left;
+    width: 55%;
+    height: 100px;
+}
+.s-text h5{
+    font-size: 13px;
+    line-height: 0;
+    color: #c5c5c5;
+}
+.s-text img{
+    width: 55%;
+    height: 20px;
+}
+.s-text p{
+    line-height: 0;
+    color: #5ab210;
+    font-size: 13px;
 }
