--- a/css/style.css
+++ b/css/style.css
@@ -415,3 +415,39 @@ img{
     color: #5ab210;
     font-size: 13px;
 }
+.subscribe-m{
+    width: 100%;
+    height: 90px;
+    background-color: #5ab210;
+}
+.sub-text{
+    float: left;
+    color: white;
+    margin: 30px 0px 0px 165px;
+}
+.sub-bar{
+    float: left;
+    width: 250px;
+    height: 30px;
+    margin: 40px 0px 0px 100px;
+}
+.sub-bar input{
+    width: 250px;
+    height: 26px;
+    border: 1px solid white;
+    background-color: #5ab210;
+}
+.sub-box{
+    width: 100px;
+    height: 30px;
+    float: left;
+    background-color: white;
+    margin-top: 40px;
+}
+.sub-box a{
+    text-decoration: none;
+    color: #707070;
+}
+.sub-box p{
+    margin: 6px 0px 0px 10px;
+}
