--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,9 @@ img{
     left: 235px;
 }
 .shoping-cart{
-	width: 33%;
+	width: 30%;
     float: left;
+    padding-left: 46px;
 }
 .shoping-icon{
 	position: relative;
@@ -73,7 +74,7 @@ img{
 .cart-text{
 	position: absolute;
     top: 10px;
-    right: 446px;
+    right: 400px;
     width: 15px;
     height: 15px;
     background-color: red;
@@ -139,21 +140,13 @@ img{
 .hero-m{
     width: 100%;
     height: 320px;
-}
-.hero-img{
-    position: relative;
-    width: 100%;
-    height: 320px;
-}
-.hero-m img{
-    width: 100%;
-    height: 320px;
+    background-image: url(../img/01_HOME.jpg);
+    background-size: 100% 100%;
 }
 .hero-text{
-    position: absolute;
-    top: 110px;
-    left: 263px;
-    right: 626px;
+   width: 40%;
+    height: 200px;
+    padding: 20px 0px 0px 150px;
 }
 .hero-text h1{
     color: white;
@@ -170,7 +163,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 365px;
+    top: 385px;
     left: 360px;
 }
 .battun a{
@@ -480,7 +473,14 @@ img{
 .about,.information,.contact{
     padding: 25px 0px 0px 27px;
 }
-.information{
+.information ul{
     list-style: none;
     color: #8e8e8e;
+}
+.information a{
+    text-decoration: none;
+    color: #8e8e8e;
+}
+.information h3{
+    padding-left: 40px;
 }
